updating shit to actually work

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,12 @@
-<section class="full-bg-img" fxLayout="row">
-	<div class="content-wrap" fxFlex>
-		<h1>Spudnik</h1>
-		<p class="lead">A multi-purpose Discord bot focused on simple server management.</p>
-    <a mat-raised-button href="https://spudnik.io/invite" class="discord-button" role="button"><img src="assets/home/discord.svg"> Add to Discord</a>
-    <a mat-raised-button href="https://spudnik.io/support" color="primary" role="button"><i class="material-icons">contact_support</i> Join Support Server</a>
+<section class="full-bg-img" fxLayout="column">
+  <app-nav></app-nav>
+	<div class="content-wrap" fxFill>
+    <div fxFlex>
+      <h1>Spudnik</h1>
+      <p class="lead">A multi-purpose Discord bot focused on simple server management.</p>
+      <a mat-raised-button href="https://spudnik.io/invite" class="discord-button" role="button"><img src="assets/home/discord.svg"> Add to Discord</a>
+      <a mat-raised-button href="https://spudnik.io/support" color="primary" role="button"><i class="material-icons">contact_support</i> Join Support Server</a>
+    </div>
 	</div>
 </section>
 
