Revert "current version"
This reverts commit ee3795f3f5b1fc64deb29e6432841e213220cbdc.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -9,3 +9,51 @@
     </div>
 	</div>
 </section>
+
+<section class="why" fxLayout="column">
+  <div class="why-wrap" fxFlex>
+    <div fxLayout="row" fxLayoutAlign="center" class="moderation">
+      <div fxFlex="30" fxFlexOffset="10">
+        <h2>Secure</h2>
+        <mat-divider></mat-divider>
+        <p>
+          Virtual Gatekeeper features ensure that your users know exactly what your server's rules are before joining. It's also a pretty useful stopgap to have in case of a server raid.
+        </p>
+      </div>
+
+      <div fxFlex="30" fxFlexOffset="10">
+        <img src="/assets/home/warn.png" />
+      </div>
+    </div>
+
+    <div fxLayout="row" fxLayoutAlign="center">
+      <div fxFlex="30" fxFlexOffset="10">
+        <img src="/assets/home/warn.png" />
+      </div>
+
+      <div fxFlex="30" fxFlexOffset="10">
+        <h2>Enforce</h2>
+        <mat-divider></mat-divider>
+        <p>
+          Spudnik brings all the standard moderation commands you expect: like voice/text muting, kicking, banning, message moving, warning, and a bunch more. Check out the command list to see all the moderation commands.
+        </p>
+
+      </div>
+    </div>
+  </div>
+
+  <div fxLayout="row" fxLayoutAlign="center">
+    <div fxFlex="30" fxFlexOffset="10">
+      <h2>Secure</h2>
+      <mat-divider></mat-divider>
+      <p>
+        Easy-to-use commands and a (soon-to-come!) dashboard give you tons of control over your server and your subsequent subjects.
+        Be as strict or as stringent as you deem necessary to maintain peace and order!
+      </p>
+    </div>
+
+    <div fxFlex="30" fxFlexOffset="10">
+
+    </div>
+  </div>
+</section>
