--- a/src/app/main/nav/nav.component.html
+++ b/src/app/main/nav/nav.component.html
@@ -21,7 +21,7 @@
 <mat-menu #docsMenu="matMenu" role="menu">
 	<a mat-menu-item href="https://docs.spudnik.io/">Docs Home</a>
 	<a mat-menu-item href="https://docs.spudnik.io/getting-started">Getting Started</a>
-	<a mat-menu-item href="https://docs.spudnik.io/commands">Command List</a>
+	<a mat-menu-item href="https://docs.spudnik.io/commands">Commands</a>
 </mat-menu>
 
 <mat-menu #mobileMenu="matMenu">
